Updated to Spigot 1.16.1